[tool.poetry]
name = "intro-data-modelling"
version = "0.1.0"
description = ""
authors = ["Felipe Tadeu <souzalima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
